--- a/interfases/Logging/Logging.css
+++ b/interfases/Logging/Logging.css
@@ -1,45 +1,64 @@
    @import url('https://api.fontshare.com/v2/css?f[]=satoshi@400,500,700&display=swap');
    
-   body {
-      margin: 0;
-      font-family: 'Satoshi', sans-serif; /*Estilo general para el tipo de letra*/
-      background-color: #0f1117;
-      display: flex; /*Permite ajustar elementos en cierta posicion, es decir los hace flexible*/
-      justify-content: center;
-      align-items: center;
-      height: 100vh; /*El body se ajusta al viewport, es decir todo el body debe quedar en lo que*/
-      color: #fff; 
-    }
-    /* Contenedor para ambos paneles*/
-
-
-.login-container {
+/* 1. BODY: centrado completo */
+body {
+  margin: 0;
+  font-family: 'Satoshi', sans-serif;
+  background-color: #0f1117;
   display: flex;
-  width: 1000px; /* anchura inicial*/
-  background: #1a1e27;
-  border-radius: 12px;
-  overflow: hidden; /*Recortar aquello que no quepa en el contenedor*/
-  box-shadow: 0 0 20px rgba(0,255,170,0.2); 
+  justify-content: center;
+  align-items: center;
+  height: 100vh;      /* ocupar todo el alto, predeterminado del viewport */
+  color: #fff;
 }
 
-/*Division de espacio dentro del contenedor login-container para ambos panenes*/
+/* Contenedor donde se ubicaran todos los elementos de logging */
+.login-container {
+  position: relative; /* para que los paneles absolutos se ubiquen dentro */
+  width: 1000px;
+  height: 507px;
+  border-radius: 12px;
+  overflow: hidden;
+  box-shadow: 0 0 20px rgba(0,255,170,0.2);
+}
 
+/* comportamiento de los elementos de cada panel */
 
-/*Dividir esto pero con un trapecio*/
-
-.left-panel, .right-panel {
-  flex: 1; /* Compartir espacio 50/50 del contenedor login-container*/
-  padding: 40px 30px; /*agrandar o disminuir*/
+.left-panel,
+.right-panel {
+  position: absolute; /* En relacion a su contenedor mas cercano*/
+  width: 100%;
+  height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-items: center;
   text-align: center;
+  padding: 40px 30px;
 }
 
+/*Estilos en ambos paneles para calcular su nueva area*/
 
 .left-panel {
   background-color: #0e1318;
+  clip-path: polygon(
+        0    0,     /* esquina sup izq*/         
+       400px 0,     /* punto sup de desplazamiento*/
+       600px 507px,  /* vertice inf corte*/
+       0    507px   /* esquina inf izq*/
+  );
 }
+
+.right-panel {
+  background-color: #1a1e27;
+  clip-path: polygon(
+    400px 0,
+    100% 0,
+    100% 507px,
+    600px 507px
+  );
+}
+
 
 
 /* Estilo para acomodar la imagen pescadores*/
